# bitbin

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
src/: config.rs  data.rs  db.rs  errors.rs  get.rs  lib.rs  main.rs  post.rs  storage.rs
