[package]
name = "bitbin"
description = "An (almost) drop-in replacement for bytebin written in Rust."
version = "0.1.0"
license = "AGPL-3.0"
repository = "https://github.com/Insprill/bitbin"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "http2", "rustls-0_21"] } # Zstd doesn't compile on aarch64 musl :/
anyhow = "1.0.86"
futures = { version = "0.3", default-features = false }
lazy-regex = "3.1.0"
log = "0.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
random-string = "1.1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rustls = "0.21" # Must stay compatible with the version actix-web is using.
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shadow-rs = { version = "0.29.0", default-features = false, features = ["git2"] }
simplelog = "0.12"
toml = "0.8.14"

[build-dependencies]
shadow-rs = { version = "0.29.0", default-features = false, features = ["git2"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = true
